se agrega el controllador de log

--- a/MediaLogger.Domain/MediaLogger.Domain.csproj
+++ b/MediaLogger.Domain/MediaLogger.Domain.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\Master\" />
+    <Compile Remove="DTOs\Master\**" />
+    <EmbeddedResource Remove="DTOs\Master\**" />
+    <None Remove="DTOs\Master\**" />
   </ItemGroup>
 
   <ItemGroup>
