--- a/MediaLoggerAPI/appsettings.json
+++ b/MediaLoggerAPI/appsettings.json
@@ -25,7 +25,8 @@
   },
   "ConnectionStrings": {
     //"DbConnection": "server=DESKTOP-BNRBFFU\\SQLEXPRESS;database=DASHBOARD;uid=sa2;pwd=6552524Aa;MultipleActiveResultSets=true;"
-    "DbConnection": "server=192.168.20.24;database=DASHBOARD_PRUEBAS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
+    "Dashboard": "server=192.168.20.24;database=DASHBOARD_PRUEBAS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
+    "Logs": "server=192.168.20.24;database=LOGS_PAYPADS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
     "MongoDb": "mongodb://localhost:27017"
 
   },
