--- a/MediaLoggerAPI/appsettings.json
+++ b/MediaLoggerAPI/appsettings.json
@@ -7,21 +7,20 @@
   },
   "AllowedHosts": "*",
   "Api-Key": {
-    "Login-Key": "Login-Api-key-@Ecity2024"
+    "Login-Key": "Login-Api-key-@Ecity2024",
+    "GetLog-key": "GetLog-Api-key-@Ecity2024"
   },
   "Jwt": {
     "Secret": "B1Z9K0-J8H2V0-G7G7X1-Q3F9L4-D3F1R7-K2J2P7"
   },
-  //"ConnectionStrings": {
-  //  "Mongo": "mongodb://localhost:27017"
-  //},
+
   "MongoDb": {
     "DataBase": "MediaLogger",
     "Colletion": "Logs"
   },
   "ConnectionStrings": {
-    //"DbConnection": "server=DESKTOP-BNRBFFU\\SQLEXPRESS;database=DASHBOARD;uid=sa2;pwd=6552524Aa;MultipleActiveResultSets=true;"
-    "Dashboard": "server=192.168.20.24;database=DASHBOARD_PRUEBAS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
+    "Dashboard": "server=192.168.20.24;database=DASHBOARD_PRODUCCION;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
+    //"Dashboard": "server=192.168.20.24;database=DASHBOARD_PRUEBAS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
     "Logs": "server=192.168.20.24;database=LOGS_PAYPADS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
     "MongoDb": "mongodb://192.168.20.48:27017/"
 
