Se cambia la estructura de los filtros

--- a/MediaLoggerAPI/appsettings.json
+++ b/MediaLoggerAPI/appsettings.json
@@ -19,8 +19,8 @@
     "Colletion": "Logs"
   },
   "ConnectionStrings": {
-    "Dashboard": "server=192.168.20.24;database=DASHBOARD_PRODUCCION;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
-    //"Dashboard": "server=192.168.20.24;database=DASHBOARD_PRUEBAS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
+    "Dashboard": "server=192.168.20.24;database=Dashboard_PRODUCCION;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
+    //"MediaLogger": "server=192.168.20.24;database=MediaLogger_PRUEBAS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
     "Logs": "server=192.168.20.24;database=LOGS_PAYPADS;uid=sa;pwd=1C1ty/*2019-;MultipleActiveResultSets=true;",
     "MongoDb": "mongodb://192.168.20.48:27017/"
 
