Se agrega el Envio y obtención de videos

--- a/MediaLoggerAPI/appsettings.json
+++ b/MediaLoggerAPI/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "Api-Key": {
     "Login-Key": "Login-Api-key-@Ecity2024",
-    "GetLog-key": "GetLog-Api-key-@Ecity2024"
+    "GetLog-key": "GetLog-Api-key-@Ecity2024",
+    "GetVideo-key": "Video-Api-key-@Ecity2024"
   },
   "Jwt": {
     "Secret": "B1Z9K0-J8H2V0-G7G7X1-Q3F9L4-D3F1R7-K2J2P7"
